fix(teachers-page): hide overflow in photos and add some teachers

--- a/asset/css/teachers-page.css
+++ b/asset/css/teachers-page.css
@@ -43,6 +43,10 @@
     display: none;
 }
 
+.teachers__section .teachers__photo {
+    overflow: hidden;
+}
+
 .teachers__section .teachers__card.show {
     display: grid;
 }
